fixing up the z-index so it will show above jquery dialogue boxes and making it live so it will work after ajax loads

--- a/webroot/css/thickbox.css
+++ b/webroot/css/thickbox.css
@@ -9,6 +9,7 @@
 #TB_window {
 	font: 12px Arial, Helvetica, sans-serif;
 	color: #333333;
+	z-index:1500;
 }
 
 #TB_secondLine {
@@ -27,14 +28,16 @@
 /* ----------------------------------------------------------------------------------------------------------------*/
 #TB_overlay {
 	position: fixed;
-	z-index:100;
 	top: 0px;
 	left: 0px;
 	height:100%;
 	width:100%;
 }
 
-.TB_overlayMacFFBGHack {background: url(macFFBgHack.png) repeat;}
+.TB_overlayMacFFBGHack {
+	background: url(macFFBgHack.png) repeat;
+}
+
 .TB_overlayBG {
 	background-color:#000;
 	filter:alpha(opacity=75);
@@ -50,7 +53,7 @@
 #TB_window {
 	position: fixed;
 	background: #ffffff;
-	z-index: 102;
+	z-index: 1502;
 	color:#000000;
 	display:none;
 	border: 4px solid #525252;
@@ -124,7 +127,7 @@ margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = d
 	display:none;
 	height:13px;
 	width:208px;
-	z-index:103;
+	z-index:1503;
 	top: 50%;
 	left: 50%;
 	margin: -6px 0 0 -104px; /* -height/2 0 0 -width/2 */
@@ -136,7 +139,7 @@ margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = d
 }
 
 #TB_HideSelect{
-	z-index:99;
+	z-index:1499;
 	position:fixed;
 	top: 0;
 	left: 0;
